fix: [PD-408] search and suggestion alignement fixes

--- a/src/component/HeaderGenders/HeaderGenders.style.scss
+++ b/src/component/HeaderGenders/HeaderGenders.style.scss
@@ -22,7 +22,7 @@
   .GenderButton {
     &-Container {
       &::before{
-        left : -12px;
+        left : 0px;
       }
     }
     &-Button {
