--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -49,8 +49,7 @@
     }
 
     h2 {
-        font-family: "Avenir Next Demi Bold";
-        font-size : 14px;
+        font: normal normal 600 14px/19px 'Avenir Next', sans-serif;
         color : #000000;
         text-transform: uppercase;
         text-align: initial;
@@ -152,7 +151,7 @@
 
     &-ItemCount {
         color: #000000;
-        font-family: "Avenir Next";
+        font-family: 'Avenir Next';
         font-size: 18px;
         font-weight: var(--fw-medium);
         line-height: 20px;
@@ -356,19 +355,38 @@ div.SearchOverlay.Overlay {
             }
         }
         &-SpecialPriceCon{
-            div {
-                font-family: 'Avenir Next', sans-serif;
-                font-weight: 700;
-                font-size: 14px;
-                letter-spacing: -0.5px;
-                color : #000000;
+            display: block;
+            font-family: 'Avenir Next', sans-serif;
+            text-align: initial;
+            &_isArabic {
+                text-align: right !important;
             }
-            .Price-Wrapper {
-                .Price-Del {
-                    margin-right: 3px;
-                    font-weight: var(--fw-medium);
+            .SearchProduct {
+                &-PriceWrapper {
+                    display: inline-block;
+                    font-size: 14px;
+                    color: #d12228;
+                    font-weight: var(--fw-bold);
+                    @media (max-width: 450px) {
+                        font-size: 11px;
+                    }
+                .Price-Discount {
+                        margin-left: 3px;
+                    }
                 }
             }
+
+            .Price {
+                direction: ltr;
+                &_isArabic {
+                    direction: rtl;
+                }
+            &-Wrapper {
+                display: inline-block;
+                margin-right: 5px;
+                margin-left: unset;
+            }
+        }
         }
         &-PriceWrapper {
             color: #d12228;
@@ -406,7 +424,7 @@ div.SearchOverlay.Overlay {
     width: 100%;
     
     &-TrandingTag {
-        font-family: 'Avenier Next';
+        font-family: 'Avenir Next';
         font-size : 13px;
         letter-spacing: 0px;
         text-align: center;
